[package]
name = "rust-image-api"
version = "0.1.0"
edition = "2021"
description = "High-performance image processing API in Rust"
authors = ["Mujahid Ansori Majid <hitzvera@gmail.com>"]

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
image = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
env_logger = "0.10"
log = "0.4"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
